# arctic

./: .gitignore  Playground.ipynb  Playground_script.py  README.md  UserStoryHannach.ipynb  demo_script.py  deps.dot  packages_vortexclust.dot  pyproject.toml  requirements.txt  tree.txt
arctic/: __init__.py  config.py
arctic/analysis/: __init__.py  aggregator.py  clustering.py  decomposition.py  geometry.py  metrics.py  pca.py  sampling.py
arctic/core/: constants.py  utils.py
arctic/io/: cleaner.py  loader.py  paths.py
arctic/models/: validation.py
arctic/visualization/: __init__.py  correlation.py  dendrogram.py  map.py  pca.py  radar.py  utils.py  violin.py
arctic/workflows/: demo.py
data/: demo_d.csv  demo_msw.csv
docs/: arctic.html  index.html  search.js  tasks.md  vortexclust.html
docs/arctic/: analysis.html  config.html  core.html  io.html  models.html  visualization.html  workflows.html
docs/arctic/core/: constants.html  utils.html
docs/arctic/io/: cleaner.html  loader.html  paths.html
docs/arctic/models/: fitting.html  validation.html
docs/arctic/workflows/: case_studies.html  demo.html
docs/vortexclust/: analysis.html  config.html  core.html  io.html  models.html  visualization.html  workflows.html
docs/vortexclust/core/: constants.html  utils.html
docs/vortexclust/models/: validation.html
docs/vortexclust/workflows/: demo.html
gui/: scale_window.py
notebooks/: DemoAnalysis_Hannach2011.ipynb  Playground.ipynb  UserStoryHannach.ipynb  UserStoryHannach2025.ipynb  UserStory_NWP.ipynb
output/: corr_results.csv
output/demo/: demo_results.csv
src/arctic/: __init__.py  computation.py  demo.py  plot.py  utils.py
tests/: test_analysis.py
tests/analysis/: test_aggregator.py  test_clustering.py  test_decomposition.py  test_geometry.py  test_metrics.py  test_sampling.py
tests/core/: test_utils.py
tests/io/: test_cleaner.py  test_loader.py  test_path.py
tests/models/: test_validation.py
tests/visualization/: test_correlation.py  test_dendrogram.py  test_map.py  test_pca.py  test_radar.py  test_utils_v.py  test_violin.py
vortexclust/: __init__.py  config.py
vortexclust/analysis/: aggregator.py  clustering.py  decomposition.py  geometry.py  metrics.py  sampling.py
vortexclust/core/: utils.py
vortexclust/io/: __init__.py  cleaner.py  paths.py
vortexclust/models/: validation.py
vortexclust/visualization/: __init__.py  correlation.py  dendrogram.py  map.py  pca.py  radar.py  utils.py  violin.py
vortexclust/workflows/: __init__.py  demo.py
