[build-system]
requires=["hatchling"] #List of packages that are needed to build arctic
build-backend="hatchling.build"

[project]
name="arctic_hgl0"
dynamic = ["version"]
authors = [
    {name="Hanna Gloyna", email="hanna.gloyna@gmx.de"},
]
description = "Python package to cluster and analyse geophysical data with focus on the polar vortex"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["cluster", "polar vortex", "analysis", "climate"]

[project.urls]
Homepage = "https://github.com/hGl0/arctic"
Issures = "https://github.com/hGl0/arctic/issues"