[build-system]
requires=["hatchling"] #List of packages that are needed to build vortexclust
build-backend="hatchling.build"

[project]
name="vortexclust"
dynamic = ["version"]
[tool.hatch.version]
path = "vortexclust/__init__.py"
authors = [{name="Hanna Gloyna", email="hanna.gloyna@gmx.de"}]
description = "Python package to cluster and analyse stratospheric polar vortex data with focus on different vortex regimes."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["cluster", "polar vortex", "analysis", "climate", "split", "displaced"]

[project.urls]
Homepage = "https://github.com/hGl0/arctic"
Issues = "https://github.com/hGl0/arctic/issues"

# optional CLI
[project.scripts]
vortexclust = "stratvortex.workflows.demo:main"

[tool.hatch.bulid]
include = ["clustvortex/**"]
exclude = ["data/**", "doc/**", "output/**", "**/__pycache__/**", "*.eps", "*.sav", "*.log"]