[build-system]
requires=["hatchling"] #List of packages that are needed to build vortexclust
build-backend="hatchling.build"

[project]
name="vortexclust"
dynamic = ["version"]
dependencies = [
    "numpy>1.22,<2.0",
    "pandas>=1.5,<3.0",
    "scikit-learn>=1.2,<2.0",
    "scipy>=1.9,<2.0",
    "matplotlib>3.6,<4.0",
    "pyproj>=3.4,<4.0",
]
[project.optional-dependencies]
# CHANGED:
# maps = ["cartopy>=0.23, <0.26]
maps = ["cartopy>=0.24,<0.26"] # compability with Python 3.13

[tool.hatch.version]
path = "vortexclust/__init__.py"
authors = [{name="Hanna Gloyna", email="hanna.gloyna@gmx.de"}]
description = "Python package to cluster and analyse stratospheric polar vortex data with focus on different vortex regimes."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["cluster", "polar vortex", "analysis", "climate", "split", "displaced"]

[project.urls]
Homepage = "https://github.com/hGl0/vortexclust"
Issues = "https://github.com/hGl0/vortexclust/issues"

# optional CLI
#[project.scripts]
#vortexclust = "vortexclust.workflows.demo:main"

[tool.hatch.build]
include = ["vortexclust/**"]
exclude = ["data/**",
    "doc/**",
    "output/**",
    "**/__pycache__/**",
    "*.eps",
    "*.sav",
    "*.log"]